########################################
########################################
##
##	Copyright (C) 2014 Korovasoft, Inc.
##
##  File:
##      \file CMakeLists.txt
##
##  Description:
##      \brief Top-level CMakeLists.txt
##
##  Author:
##      \author J. Caleb Wherry
##
########################################
########################################

cmake_minimum_required(VERSION 2.8)
project(Concurrent-GARTH)

# Add subdirectories:
add_subdirectory(lib)
add_subdirectory(src)
